gwapi-and-istiogw/gwapi-mesh/pa.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: gwapi-to-mesh
spec:
  selector:
    matchLabels:
      app: http
  portLevelMtls:
    '8080':
      mode: PERMISSIVE
