gwapi-and-istiogw/gwapi-mesh/dr.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: http-mtls
spec:
  host: http
  trafficPolicy:
    tls:
      mode: DISABLE
