gwapi-and-istiogw/gwapi-mesh/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-mesh
spec:
  parentRefs:
  - name: http-gateway
    namespace: gwapi-to-istiogw
  hostnames: ["http.apps.example.com"]
  rules:
  - backendRefs:
    - name: http
      namespace: gwapi-to-istiogw
      port: 8080
      weight: 100
